##Text encoding: utf-8

2008-04-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/formula.cc: more work on ambiguous symbols.
	* libs/gcu/formula.h: ditto.
	* libs/gcu/molecule.cc: ditto.
	* libs/gcu/object.cc: ditto.
	* libs/gcu/residue.cc: ditto.
	* libs/gcu/residue.h: ditto.
	* programs/calc/gchemcalc.cc: ditto.

2008-04-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* all: changed build system to make branching easier.

2008-04-23  Jordan Mantha  <mantha@ubuntu.com>
	* libs/gcp/fragment-residue.cc: add cstring include for g++ 4.3
	* libs/gcp/reaction-prop.cc: ditto
	* libs/gcu/loader.cc: ditto
	* libs/gcu/printable.cc: ditto
	* plugins/loaders/cdx/cdx.cc: ditto
	* plugins/loaders/cdxml/cdxml.cc: ditto
	* plugins/paint/arrows/retrosynthesis.cc: ditto
	* plugins/paint/residues/pseudo-atom.cc: ditto
	* plugins/paint/selection/group.cc: ditto
	* plugins/paint/text/texttool.cc: ditto

2008-04-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* glade/gchemcalc.glade: replaced buttons by menu items.
	* libs/gcu/formula.cc: start working on the various modes.
	* programs/calc/gchemcalc.cc: update user interface and add print
	preview and image export for the isotopic pattern chart.

2008-04-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/elements.xml.in: add a default valence (might be somewhat
	arbitrary in some cases), removed not anymore used atomic weights.
	* database/residues.xml.in: add the M generic symbol.
	* libs/gcp/application.cc: add ps and pdf to image export.
	* libs/gcp/view.cc: reimplemented eps export and add ps and pdf.
	* libs/gcu/element.cc: load default valence from elements.xml.

2008-04-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/view.cc: fixed an update issue which blocked showing
	2D structures in the mozilla plugin.
	* libs/gcp/widgetdata.cc: enhanced GetObjectBounds.
	* libs/gcu/gtkspectrumviewer.cc: really implemented.
	* mozilla-plugin/chem-viewer.cc: finished 2D structures support, and